[Bug #166228553] Updates on validation
